Create file javascript and a responsive header q git add .

--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <title>Portofolio</title>
 </head>
 <body>
-  
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <nav id="nav">
+          <ul>
+            <li><a href="#about">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="header-menu">
+        <i class="bx bx-menu-alt-left" id="menu"></i>
+      </div>
+      <div class="header-right">
+        <input type="search" class="search" placeholder="Seacrh in here...">
+        <label for=""><i class="bx bx-search"></i></label>
+    </div>
+    </div>
+  </header>
+
+
+  <script src="main.js"></script>
 </body>
 </html>
