Create a Home Button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div class="home-left">
           <h2>HELLO WORLD! I'M <br> <span>VALENTINO STANIA</span></h2>
           <p>FRONTEND DEVELOPER | MOBILE DEVELOPER</p>
+          <input type="button" class="btn-home" value="My Works">
         </div>
         <div class="home-right">
           <img src="img/undraw-2.png" alt="">
