--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header-left">
         <nav id="nav">
           <ul>
-            <li><a href="#about">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#works">Works</a></li>
@@ -33,9 +33,8 @@
     </div>
   </header>
 
-
   <div class="main">
-    <section class="home">
+    <section class="home" id="home">
       <div class="container">
         <div class="home-left">
           <h2>HELLO WORLD! I'M <br> <span>VALENTINO STANIA</span></h2>
@@ -47,8 +46,24 @@
         </div>
       </div>
     </section>
-
-
+    <section class="about" id="about">
+      <div class="container">
+        <div class="heading">
+         <h2>About</h2>
+        </div>
+        <div class="about-content">
+          <div class="about-image">
+            <img src="img/undraw404.png" alt="">
+          </div>
+          <div class="about-text"> 
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores debitis atque sed numquam, molestiae ipsum fugiat error sit ut ab laborum eos culpa voluptate voluptatibus optio aliquam reprehenderit enim excepturi.
+            </p>
+            <p class="quotes">" Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam, cupiditate! "</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 
   <script src="js/main.js"></script>
