Change image in about and add a wave

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <img src="img/undraw-2.png" alt="">
         </div>
       </div>
+      <div class="home-wave">
+        <img src="img/wave-3.svg" alt="">
+      </div>
     </section>
     <section class="about" id="about">
       <div class="container">
@@ -53,7 +56,7 @@
         </div>
         <div class="about-content">
           <div class="about-image">
-            <img src="img/undraw404.png" alt="">
+            <img src="img/profile-1.jpg" alt="">
           </div>
           <div class="about-text"> 
             <p>
