Create responsive skill section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
         </div>
       </div>
     </section>
+    <section class="skill" id="skills">
+      <div class="container">
+        <div class="heading">
+          <h2>SKill</h2>
+        </div>
+        <div class="skill-content">
+          <p id="html">HTML</p>
+        <div class="progress">
+            <div class="progress-done html">
+                <span>60%</span>
+            </div>
+        </div>
+        <p id="css">CSS</p>
+        <div class=" progress">
+            <div class="progress-done css">
+                <span>50%</span>
+            </div>
+        </div>
+        <p id="javascript">JAVASCRIPT</p>
+        <div class="progress">
+            <div class="progress-done javascript">
+                <span>30%</span>
+            </div>
+        </div>
+        </div>
+      </div>
+    </section>
   </div>
 
   <script src="js/main.js"></script>
