Create work section and add a wave in top work section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="skill" id="skills">
       <div class="container">
         <div class="heading">
-          <h2>SKill</h2>
+          <h2>My SKill</h2>
         </div>
         <div class="skill-content">
           <p id="html">HTML</p>
@@ -91,6 +91,34 @@
                 <span>30%</span>
             </div>
         </div>
+        </div>
+      </div>
+    </section>
+    <section class="works" id="works">
+      <div class="works-wave">
+        <img src="img/wave-3.svg" alt="">
+      </div>
+      <div class="container">
+        <div class="heading">
+          <h2>My Works</h2>
+        </div>
+        <div class="works-content">
+          <div class="work-card">
+            <img src="img/profile-1.jpg" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, ullam.</p>
+          </div>
+          <div class="work-card">
+            <img src="img/profile-1.jpg" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, ullam.</p>
+          </div>
+          <div class="work-card">
+            <img src="img/profile-1.jpg" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, ullam.</p>
+          </div>
+          <div class="work-card">
+            <img src="img/profile-1.jpg" alt="">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, ullam.</p>
+          </div>
         </div>
       </div>
     </section>
