Create contact, footer, scroll to top, social media, and fix skill and input seacrh

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="skill" id="skills">
       <div class="container">
         <div class="heading">
-          <h2>My SKill</h2>
+          <h2>My Skill</h2>
         </div>
         <div class="skill-content">
           <p id="html">HTML</p>
@@ -122,8 +122,62 @@
         </div>
       </div>
     </section>
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="heading">
+          <h2>Contact</h2>
+        </div>
+        <div class="contact-left">
+          <p>Name</p>
+          <input type="text" class="name">
+          <p>Email</p>
+          <input type="text" class="email">
+          <p>Subject</p>
+          <input type="text" class="email">
+          <p>Message</p>
+          <textarea class="message" cols="30" rows="10"></textarea>
+          <input type="submit" class="submit" value="Send Message">
+        </div>
+      </div>
+    </section>
   </div>
-
+  <footer>
+    <div class="container">
+      <div class="footer-left">
+        <ul>
+          <li><a href="https://github.com/valentinocfs" target="_blank"><i class="bx bxl-github"></i></a></li>
+          <li><a href="https://instagram.com/valentino.cfs" target="_blank"><i class="bx bxl-instagram"></i></a></li>
+          <li><a href="https://www.youtube.com/channel/UC2HgNd0k1P6iTdXVr-I-RVw" target="_blank"><i class="bx bxl-youtube"></i></a></li>
+          <li><a href="https://twitter.com/valentino_cfs" target="_blank"><i class="bx bxl-twitter"></i></a></li>
+        </ul>
+      </div>
+      <div class="footer-right">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#works">Works</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-center">
+      <p>&copy; Copyright 2020 Valentino Stania</p>
+    </div>
+  </footer>
+  <div class="social">
+    <ul>
+      <li><a href="https://github.com/valentinocfs" target="_blank"><i class="bx bxl-github"></i></a></li>
+      <li><a href="https://instagram.com/valentino.cfs" target="_blank"><i class="bx bxl-instagram"></i></a></li>
+      <li><a href="https://www.youtube.com/channel/UC2HgNd0k1P6iTdXVr-I-RVw" target="_blank"><i class="bx bxl-youtube"></i></a></li>
+      <li><a href="https://twitter.com/valentino_cfs" target="_blank"><i class="bx bxl-twitter"></i></a></li>
+    </ul>
+  </div>
+  <div class="container">
+    <div class="scroll-top">
+      <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+    </div>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
